--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "mfe1": "ng s mfe1",
+    "shell": "ng s shell",
+    "all": "npm-run-all --parallel mfe1 shell",
     "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
   },
   "private": true,
@@ -20,6 +23,7 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "npm-run-all": "^4.1.5",
     "primeicons": "^6.0.1",
     "primeng": "^17.4.0",
     "rxjs": "~7.8.0",
@@ -37,6 +41,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ng-packagr": "^17.1.0",
     "ngx-build-plus": "^17.0.0",
     "typescript": "~5.2.2"
   }
