--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,11 @@
     "declaration": false,
     "experimentalDecorators": true,
     "moduleResolution": "node",
+    "paths": {
+      "shared-library": [
+        "./dist/shared-library"
+      ]
+    },
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
